--- a/src/index.scss
+++ b/src/index.scss
@@ -1,22 +1,24 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
 
-$font-family: "Montserrat", sans-serif;
-$font-secondary: Roboto, sans-serif;
-$orange-primary: #ff9964;
-$orange-secondary: #ff6d63;
-$orange-alt: #ff7a64;
-$blue-primary: #23abb5;
-$blue-secondary: #eff5fc;
-$bg-primary: #f1f5ff;
-$bg-secondary: #fff;
-$disabled: #d4e5fe;
-$border-color: #d4e5f9;
-$text-primary: #000;
-$text-secondary: rgba(0, 0, 0, .502);
-$focus: #000;
-$button-text: #fff;
-$shadow: #0006;
-$invert-color: none;
+:root {
+  --font-family: "Montserrat", sans-serif;
+  --font-secondary: Roboto, sans-serif;
+  --orange-primary: #ff9964;
+  --orange-secondary: #ff6d63;
+  --orange-alt: #ff7a64;
+  --blue-primary: #23abb5;
+  --blue-secondary: #eff5fc;
+  --bg-primary: #f1f5ff;
+  --bg-secondary: #fff;
+  --disabled: #d4e5fe;
+  --border-color: #d4e5f9;
+  --text-primary: #000;
+  --text-secondary: rgba(0, 0, 0, 0.502);
+  --focus: #000;
+  --button-text: #fff;
+  --shadow: #0006;
+  --invert-color: none;
+}
 
 * {
   padding: 0;
@@ -36,7 +38,6 @@ $invert-color: none;
 }
 
 a {
-
   &:focus,
   &:active {
     outline: none;
@@ -60,7 +61,7 @@ aside {
 
 html,
 body {
-  font-family: $font-family;
+  font-family: var(--font-family);
   font-size: 14px;
   overflow: auto;
   text-size-adjust: 100%;
