--- a/src/components/input/input.module.scss
+++ b/src/components/input/input.module.scss
@@ -7,6 +7,7 @@
     outline: none;
     padding: 0 10px;
     transition: .2s all;
+    width: 100%;
     &:focus {
         box-shadow: 0 0 0 2px var(--orange-primary);
     }
