--- a/src/components/input/input.module.scss
+++ b/src/components/input/input.module.scss
@@ -8,6 +8,7 @@
     padding: 0 10px;
     transition: .2s all;
     width: 100%;
+    max-width: 340px;
     &:focus {
         box-shadow: 0 0 0 2px var(--orange-primary);
     }
