--- a/src/index.scss
+++ b/src/index.scss
@@ -62,6 +62,7 @@ aside {
 html,
 body {
   font-family: var(--font-family);
+  background-color: var(--bg-primary);
   font-size: 14px;
   overflow: auto;
   text-size-adjust: 100%;
@@ -114,4 +115,43 @@ h6 {
   align-items: center;
   justify-content: center;
   min-height: calc(100vh - 40px);
+}
+
+.auth {
+  background-color: var(--bg-secondary);
+  padding: 32px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  flex: 1;
+  max-width: 520px;
+}
+
+.logo_title {
+  display: inline-block;
+  border-bottom: 1px solid #0000;
+  padding: 0px 10px;
+  transition: 0.5s all;
+  border-radius: 2px;
+  height: 100%;
+  max-width: 240px;
+  width: 100%;
+  &:hover {
+    border-color: var(--orange-primary);
+  }
+}
+
+.form {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 32px;
+}
+
+.from_inputs {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 }
