--- a/src/index.scss
+++ b/src/index.scss
@@ -18,6 +18,7 @@
   --button-text: #fff;
   --shadow: #0006;
   --invert-color: none;
+  --gray: #808080;
 }
 
 * {
@@ -154,4 +155,11 @@ h6 {
   display: flex;
   align-items: center;
   flex-direction: column;
+}
+
+.form__buttons {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
