added errors in form

--- a/src/index.scss
+++ b/src/index.scss
@@ -163,3 +163,9 @@ h6 {
   flex-direction: column;
   align-items: center;
 }
+
+.from__error {
+  margin-top: 10px;
+  font-weight: 700;
+  color: var(--orange-secondary);
+}
