--- a/src/index.scss
+++ b/src/index.scss
@@ -1,7 +1,7 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
 :root {
-  --font-family: "Montserrat", sans-serif;
+  --font-family: 'Montserrat', sans-serif;
   --font-secondary: Roboto, sans-serif;
   --orange-primary: #ff9964;
   --orange-secondary: #ff6d63;
