added error page

--- a/src/index.scss
+++ b/src/index.scss
@@ -6,6 +6,7 @@
   --orange-primary: #ff9964;
   --orange-secondary: #ff6d63;
   --orange-alt: #ff7a64;
+  --orange-text: #220500;
   --blue-primary: #23abb5;
   --blue-secondary: #eff5fc;
   --bg-primary: #f1f5ff;
@@ -107,7 +108,6 @@ h3,
 h4,
 h5,
 h6 {
-  font-size: inherit;
   font-weight: inherit;
 }
 
