--- a/src/components/LogoLink/styles.scss
+++ b/src/components/LogoLink/styles.scss
@@ -7,6 +7,7 @@
   height: 100%;
   max-width: 240px;
   width: 100%;
+  margin: 40px 0px 40px -10px;
   &:hover {
     border-color: var(--orange-primary);
   }
