--- a/src/pages/login/styles.scss
+++ b/src/pages/login/styles.scss
@@ -19,6 +19,21 @@
   align-items: center;
   gap: 32px;
 
+  & a:hover {
+    border-color: var(--orange-primary);
+  }
+
+  & a {
+    border-bottom: 1px solid #0000;
+    color: var(--orange-primary);
+    font-weight: 700;
+    outline: none;
+    padding-left: 4px;
+    padding-right: 4px;
+    text-decoration: none;
+    transition: 0.5s all;
+  }
+
   &__inputs {
     width: 100%;
     display: flex;
@@ -31,5 +46,25 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+  }
+
+  &__register-reset {
+    display: block;
+    width: 100%;
+    text-align: center;
+  }
+
+  &__reset-password {
+    margin-top: 8px;
+  }
+
+  &__copyright {
+    color: #4a4a4a;
+    font-family: Montserrat, sans-serif;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 1.25;
+    text-align: center;
   }
 }
