--- a/src/components/Input/styles.scss
+++ b/src/components/Input/styles.scss
@@ -1,3 +1,5 @@
+$breakpoint-sm: 576px;
+
 .input {
   background-color: var(--bg-primary);
   border: 1px solid var(--border-color);
@@ -13,7 +15,7 @@
     box-shadow: 0 0 0 2px var(--orange-primary);
   }
 
-  @media (max-width: 576px) {
+  @media (max-width: $breakpoint-sm) {
     max-width: 100%;
   }
 }
