--- a/src/components/Input/styles.scss
+++ b/src/components/Input/styles.scss
@@ -1,15 +1,19 @@
 .input {
-    background-color: var(--bg-primary);
-    border: 1px solid var(--border-color);
-    border-radius: 4px;
-    height: 40px;
-    margin-top: 16px;
-    outline: none;
-    padding: 0 10px;
-    transition: .2s all;
-    width: 100%;
-    max-width: 340px;
-    &:focus {
-        box-shadow: 0 0 0 2px var(--orange-primary);
-    }
+  background-color: var(--bg-primary);
+  border: 1px solid var(--border-color);
+  border-radius: 4px;
+  height: 40px;
+  margin-top: 16px;
+  outline: none;
+  padding: 0 10px;
+  transition: 0.2s all;
+  width: 100%;
+  max-width: 340px;
+  &:focus {
+    box-shadow: 0 0 0 2px var(--orange-primary);
+  }
+
+  @media (max-width: $breakpoint-sm) {
+    max-width: 100%;
+  }
 }
